tests/invalid/generated_binop_pow_str_none/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: str = "hello"
    y: None = None
    z = x ** y
